@@ -1,5 +1,5 @@
 Package: polyCub
-Title: Cubature (Numerical Integration) over Polygonal Domains
+Title: Cubature over Polygonal Domains
 Version: 0.2-0
 Date: 2013-05-09
 Authors@R: c(person("Sebastian", "Meyer",
